--- a/res/layout/activity_slide.xml
+++ b/res/layout/activity_slide.xml
@@ -15,6 +15,12 @@ android:layout_gravity="center">
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
        />
+   <ImageView
+        android:id="@+id/red_heart_image"
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content" 
+        android:gravity="top"
+       />
   <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
